--- a/html/user/card-create.html
+++ b/html/user/card-create.html
@@ -302,7 +302,7 @@
                                                                             <label for="color1" class="colorOne"></label>
                                                                         </div>
                                                                         <div class="form-check">
-                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color2" onclick="changeColor('black')">
+                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color2" onclick="changeColor('rgb(0, 0, 0)')">
                                                                             <label for="color2" class="colorTwo"></label>
                                                                         </div>
                                                                         <div class="form-check">
@@ -979,9 +979,6 @@
     };
 
 
-
-
-
     // drag and drop
     const dropItems = document.getElementById('drop-items')
     new Sortable(dropItems, {
@@ -1025,6 +1022,11 @@
         var element = document.getElementById("clrBg");
         element.style.backgroundColor = color;
     }
+    $(document).on('input','#colorPicker',function(){
+        let color = $(this).val();
+        var element = document.getElementById("clrBg");
+        element.style.backgroundColor = color;
+    })
 
 
     </script>
