--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,17 @@
 </head>
 
 <body>
+    <!-- ======================= Header Top  =========================== -->
+    <div class="header_top">
+        <!-- container -->
+        <div class="container">
+            <div class="warning_text text-center">
+                <h3>Get a free traial of mtgpro.me</h3>
+            </div>
+        </div>
+        <!-- container -->
+    </div>
+
     <!-- ======================= Header  =========================== -->
     <div class="header">
         <!-- container -->
