--- a/html/index.html
+++ b/html/index.html
@@ -14,18 +14,20 @@
 </head>
 
 <body>
-    <!-- ======================= Header Top  =========================== -->
+
+ <header class="header_section sticky-top">
+    <!-- Header top -->
     <div class="header_top">
         <!-- container -->
         <div class="container">
             <div class="warning_text text-center">
-                <h3>Get a free traial of mtgpro.me</h3>
+                <h3>Get a free traial of ContactSolutions</h3>
             </div>
         </div>
         <!-- container -->
     </div>
 
-    <!-- ======================= Header  =========================== -->
+    <!-- header -->
     <div class="header">
         <!-- container -->
         <div class="container">
@@ -96,6 +98,8 @@
         </div>
         <!-- container -->
     </div>
+</header>
+
  
     <!-- ======================= Banner  =========================== -->
     <div class="banner section">
@@ -592,20 +596,74 @@
         <!-- container -->
         <div class="container">
             <!-- row -->
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="footer_content">
-                        <div class="copyright">
-                            <p>&copy; Copyright 2022. All Rights Reserved.</p>
+            <div class="row gy-4">
+                <div class="col-md-6 col-lg-6">
+                    <div class="footer_widget pe-lg-5">
+                        <div class="widget_title mb-4">
+                             <h3>ContactSolutions</h3>
+                        </div>
+                        <div class="footer_article">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Cum aliquid, nam sint voluptates et aliquam</p>
+                        </div>
+                        <div class="social_media">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-linkedin"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-pinterest"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="footer_menu float-md-end">
-                        <ul>
-                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                            <li><a href="terms-conditions.html">Terms & Conditions</a></li>
-                        </ul>
+                <div class="col-6 col-lg-3">
+                    <div class="footer_widget">
+                        <div class="widget_title mb-4">
+                            <h3>Quick Links</h3>
+                        </div>
+                        <div class="footer_menu">
+                            <ul>
+                                <li><a href="#">Cards</a></li>
+                                <li><a href="#">Data Protection</a></li>
+                                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                <li><a href="terms-conditions.html">Terms & Conditions</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <div class="footer_widget">
+                        <div class="widget_title mb-4">
+                            <h3>Pages</h3>
+                        </div>
+                        <div class="footer_menu">
+                            <ul>
+                                <li><a href="#">Tutorials</a></li>
+                                <li><a href="#">Help</a></li>
+                                <li><a href="#">User Login</a></li>
+                                <li><a href="#">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -613,11 +671,15 @@
         </div>
         <!-- container -->
     </footer>
+
+
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script>
+
             // aos animation
             AOS.init({
                 once: true,
