--- a/html/index.html
+++ b/html/index.html
@@ -14,64 +14,35 @@
 </head>
 
 <body>
-
- <header class="header_section sticky-top">
-    <!-- Header top -->
-    <div class="header_top">
-        <!-- container -->
-        <div class="container">
-            <div class="warning_text text-center">
-                <h3>Get a free traial of ContactSolutions</h3>
+    <!-- ======================= Header  =========================== -->
+    <header class="header_section sticky-top">
+        <!-- Header top -->
+        <div class="header_top">
+            <!-- container -->
+            <div class="container">
+                <div class="warning_text text-center">
+                    <h3>Get a free traial of ContactSolutions</h3>
+                </div>
             </div>
+            <!-- container -->
         </div>
-        <!-- container -->
-    </div>
-
-    <!-- header -->
-    <div class="header">
-        <!-- container -->
-        <div class="container">
-            <nav class="navbar navbar-expand-lg p-0">
-                <div class="container-fluid">
-                    <!-- logo -->
-                    <a class="navbar-brand p-0" href="index.html">
-                        <img src="assets/images/logo.png" alt="logo">
-                    </a>
-                    <!-- toggle bar -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <!-- desktop menu -->
-                    <div class="collapse navbar-collapse d-none d-lg-block" id="navbarNav">
-                        <ul class="navbar-nav mt-4 mt-lg-0 ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about-us.html">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="pricing.html">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="signin.html">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#c62f00" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="bevel"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                                    Sign In
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- mobile menu -->
-                    <div class="mobile_menu d-block d-lg-none offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-                        <div class="offcanvas-header">
-                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body mt-3">
-                           <ul class="navbar-nav">
+        <!-- header -->
+        <div class="header">
+            <!-- container -->
+            <div class="container">
+                <nav class="navbar navbar-expand-lg p-0">
+                    <div class="container-fluid">
+                        <!-- logo -->
+                        <a class="navbar-brand p-0" href="index.html">
+                            <img src="assets/images/logo.png" alt="logo">
+                        </a>
+                        <!-- toggle bar -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <!-- desktop menu -->
+                        <div class="collapse navbar-collapse d-none d-lg-block" id="navbarNav">
+                            <ul class="navbar-nav mt-4 mt-lg-0 ms-auto">
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
@@ -86,21 +57,56 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="signin.html">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#c62f00" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="bevel"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#c62f00" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="bevel">
+                                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                            <circle cx="9" cy="7" r="4"></circle>
+                                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                        </svg>
                                         Sign In
                                     </a>
                                 </li>
                             </ul>
                         </div>
+                        <!-- mobile menu -->
+                        <div class="mobile_menu d-block d-lg-none offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                            <div class="offcanvas-header">
+                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body mt-3">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="about-us.html">About Us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="pricing.html">Pricing</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="contact.html">Contact</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="signin.html">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#c62f00" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="bevel">
+                                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                                <circle cx="9" cy="7" r="4"></circle>
+                                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                            </svg>
+                                            Sign In
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
+            <!-- container -->
         </div>
-        <!-- container -->
-    </div>
-</header>
-
- 
+    </header>
     <!-- ======================= Banner  =========================== -->
     <div class="banner section">
         <!-- container -->
@@ -600,7 +606,7 @@
                 <div class="col-md-6 col-lg-6">
                     <div class="footer_widget pe-lg-5">
                         <div class="widget_title mb-4">
-                             <h3>ContactSolutions</h3>
+                            <h3>ContactSolutions</h3>
                         </div>
                         <div class="footer_article">
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Cum aliquid, nam sint voluptates et aliquam</p>
@@ -668,47 +674,47 @@
                 </div>
             </div>
             <!-- row -->
+
+            <div class="copyright text-center mt-4">
+                <p>&copy; Copyright 2022. All Rights Reserved.</p>
+            </div>
         </div>
         <!-- container -->
     </footer>
-
-
-
     <script src="assets/js/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script>
-
-            // aos animation
-            AOS.init({
-                once: true,
-                offset: 300,
-                duration: 800,
-            });
-            // Review Carousel
-            var owl = $('.review_wrapper');
-            owl.owlCarousel({
-                loop: true,
-                margin: 10,
-                nav: true,
-                dot: true,
-                autoplay: false,
-                autoplayTimeout: 5000,
-                autoplayHoverPause: true,
-                navText: ["<i class='fa fa-angle-left'></i>", "<i class='fa fa-angle-right'></i>"],
-                responsive: {
-                    0: {
-                        items: 1
-                    },
-                    768: {
-                        items: 2
-                    },
-                    992: {
-                        items: 3
-                    }
-                }
-            });
+    // aos animation
+    AOS.init({
+        once: true,
+        offset: 300,
+        duration: 800,
+    });
+    // Review Carousel
+    var owl = $('.review_wrapper');
+    owl.owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        dot: true,
+        autoplay: false,
+        autoplayTimeout: 5000,
+        autoplayHoverPause: true,
+        navText: ["<i class='fa fa-angle-left'></i>", "<i class='fa fa-angle-right'></i>"],
+        responsive: {
+            0: {
+                items: 1
+            },
+            768: {
+                items: 2
+            },
+            992: {
+                items: 3
+            }
+        }
+    });
     </script>
 </body>
 
