--- a/html/terms-conditions.html
+++ b/html/terms-conditions.html
@@ -12,54 +12,34 @@
 
 <body>
     <!-- ======================= Header  =========================== -->
-    <div class="header">
-        <!-- container -->
-        <div class="container">
-            <nav class="navbar navbar-expand-lg p-0">
-                <div class="container-fluid">
-                    <!-- logo -->
-                    <a class="navbar-brand p-0" href="index.html">
-                        <img src="assets/images/logo.png" alt="logo">
-                    </a>
-                    <!-- toggle bar -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <!-- desktop menu -->
-                    <div class="collapse navbar-collapse d-none d-lg-block" id="navbarNav">
-                        <ul class="navbar-nav mt-4 mt-lg-0 ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about-us.html">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="pricing.html">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="signin.html">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#c62f00" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="bevel">
-                                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-                                        <circle cx="9" cy="7" r="4"></circle>
-                                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-                                        <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                                    </svg>
-                                    Sign In
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- mobile menu -->
-                    <div class="mobile_menu d-block d-lg-none offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-                        <div class="offcanvas-header">
-                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body mt-3">
-                            <ul class="navbar-nav">
+    <header class="header_section sticky-top">
+        <!-- Header top -->
+        <div class="header_top">
+            <!-- container -->
+            <div class="container">
+                <div class="warning_text text-center">
+                    <h3>Get a free traial of ContactSolutions</h3>
+                </div>
+            </div>
+            <!-- container -->
+        </div>
+        <!-- header -->
+        <div class="header">
+            <!-- container -->
+            <div class="container">
+                <nav class="navbar navbar-expand-lg p-0">
+                    <div class="container-fluid">
+                        <!-- logo -->
+                        <a class="navbar-brand p-0" href="index.html">
+                            <img src="assets/images/logo.png" alt="logo">
+                        </a>
+                        <!-- toggle bar -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <!-- desktop menu -->
+                        <div class="collapse navbar-collapse d-none d-lg-block" id="navbarNav">
+                            <ul class="navbar-nav mt-4 mt-lg-0 ms-auto">
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
@@ -85,12 +65,45 @@
                                 </li>
                             </ul>
                         </div>
+                        <!-- mobile menu -->
+                        <div class="mobile_menu d-block d-lg-none offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                            <div class="offcanvas-header">
+                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body mt-3">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="about-us.html">About Us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="pricing.html">Pricing</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="contact.html">Contact</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="signin.html">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#c62f00" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="bevel">
+                                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                                <circle cx="9" cy="7" r="4"></circle>
+                                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                            </svg>
+                                            Sign In
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
+            <!-- container -->
         </div>
-        <!-- container -->
-    </div>
+    </header>
     <!-- ======================= Terms Conditions  =========================== -->
     <div class="termsconditon_sec mt-5 mb-5">
         <!-- container -->
@@ -116,20 +129,74 @@
         <!-- container -->
         <div class="container">
             <!-- row -->
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="footer_content">
-                        <div class="copyright">
-                            <p>&copy; Copyright 2022. All Rights Reserved.</p>
+            <div class="row gy-4">
+                <div class="col-md-6 col-lg-6">
+                    <div class="footer_widget pe-lg-5">
+                        <div class="widget_title mb-4">
+                            <h3>ContactSolutions</h3>
+                        </div>
+                        <div class="footer_article">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Cum aliquid, nam sint voluptates et aliquam</p>
+                        </div>
+                        <div class="social_media">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-linkedin"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-pinterest"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="footer_menu float-md-end">
-                        <ul>
-                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                            <li><a href="terms-conditions.html">Terms & Conditions</a></li>
-                        </ul>
+                <div class="col-6 col-lg-3">
+                    <div class="footer_widget">
+                        <div class="widget_title mb-4">
+                            <h3>Quick Links</h3>
+                        </div>
+                        <div class="footer_menu">
+                            <ul>
+                                <li><a href="#">Cards</a></li>
+                                <li><a href="#">Data Protection</a></li>
+                                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                <li><a href="terms-conditions.html">Terms & Conditions</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <div class="footer_widget">
+                        <div class="widget_title mb-4">
+                            <h3>Pages</h3>
+                        </div>
+                        <div class="footer_menu">
+                            <ul>
+                                <li><a href="#">Tutorials</a></li>
+                                <li><a href="#">Help</a></li>
+                                <li><a href="#">User Login</a></li>
+                                <li><a href="#">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
